[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Drop.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Drop" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
physics_material_override = SubResource( 2 )
can_sleep = false
linear_damp = 0.0
angular_damp = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="ExitTweenDelayTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ExitTweenScale" type="Tween" parent="."]

[node name="ExitTweenAlpha" type="Tween" parent="."]

[node name="ExitTweenDurationTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ExitTweenDelayTimer" to="." method="_on_ExitTweenDelayTimer_timeout"]
[connection signal="timeout" from="ExitTweenDurationTimer" to="." method="_on_ExitTweenDurationTimer_timeout"]
